Fixing responsiveness issue where Experiences would leak out of the viewport on small viewports

--- a/src/components/common/CV/CV.css
+++ b/src/components/common/CV/CV.css
@@ -59,7 +59,7 @@
 
 @media(max-width: 1280px){
     .curriculum-vitae-container{
-        width: 99%;
+        width: 100%;
         padding: 0 2rem;
     }
 
