--- a/src/components/ui/Experience/Experience.css
+++ b/src/components/ui/Experience/Experience.css
@@ -23,3 +23,13 @@ span.date{
 p.dates{
     display: flex;
 }
+
+@media(max-width: 430px){
+
+    .experience-container{
+        width: 95%;
+    }
+    .experience-position{
+        column-gap: 0.5rem;
+    }
+}
